# rehearsal-schedule

./: .gitignore  README.md  _quarto.yml  app.py  class-rosters-copy-git-hub-not-recognizing.xlsx  class-rosters.xlsx  input.xlsx  main.py  make-schedules-pdf.sh  make-student-schedules.py  pyproject.toml
.streamlit/: config.toml
templates/: schedule.html
