[project]
name = "rehearsal-schedule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "streamlit>=1.50.0",
    "tabulate>=0.9.0",
    "weasyprint>=66.0",
]
