[project]
name = "rehearsal-schedule"
version = "0.1.0"
description = "Streamlit application for CD&F Studio May Performance/Rehearsal Helper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "weasyprint>=68.1",
]
